[package]
name = "value_pool"
version = "0.1.0"
edition = "2021"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
bench = false

[features]
default = []
double_linked_list = []
unsafe = []
nightly = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "dl_list_bench"
harness = false
required-features = ["double_linked_list"] 

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
strip = "none"
debug=true

[profile.release]
strip = "symbols"