[package]
name = "value_pool"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This crate implements a ValuePool struct that makes the creation of self-referential datastructures easier and safer."
repository = "https://github.com/MrPoisen/value_pool"
readme = "Readme.md"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
bench = false

[features]
default = []
unsafe = []

[dependencies]

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
strip = "none"
debug=true

[profile.release]
strip = "symbols"